force-app/main/default/objects/Course_Activity_Completion__c/Course_Activity_Completion__c.object-meta.xml
<CustomObject>
    <description>Individual learner activity completions are tracked in Salesforce, Penny flags can be auto-set based on completion patterns, and grade data from Google Classroom is stored in the system of record.</description>
    <label>Course Activity Completion</label>
    <nameField>
        <displayFormat>CAC-{000}</displayFormat>
        <label>Completion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Activity Completions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>