force-app/main/default/objects/Course_Activity_Completion__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>Course_Module_Activity__c</referenceTo>
    <relationshipLabel>Course Activity Completions</relationshipLabel>
    <relationshipName>Course_Activity_Completions</relationshipName>
    <type>Lookup</type>
</CustomField>