force-app/main/default/objects/Course_Activity_Completion__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tech Debt?  Perhaps pull contact information and &quot;stamp&quot; on the record</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Course Activity Completions</relationshipLabel>
    <relationshipName>Course_Activity_Completions</relationshipName>
    <type>Lookup</type>
</CustomField>