force-app/main/default/objects/Course_Activity_Completion__c/fields/Course_Module__c.field-meta.xml
<CustomField>
    <fullName>Course_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>denormalized from Activity for rollup and reporting</description>
    <inlineHelpText>denormalized from Activity for rollup and reporting</inlineHelpText>
    <label>Course Module</label>
    <referenceTo>Course_Module__c</referenceTo>
    <relationshipLabel>Course Activity Completions</relationshipLabel>
    <relationshipName>Course_Activity_Completions</relationshipName>
    <type>Lookup</type>
</CustomField>