force-app/main/default/objects/Course_Activity_Completion__c/fields/External_Submission_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Submission_Id__c</fullName>
    <description>GC submissionId dedup key. Re-running sync must never create duplicate records.</description>
    <externalId>true</externalId>
    <inlineHelpText>GC submissionId dedup key. Re-running sync must never create duplicate records.</inlineHelpText>
    <label>External Submission Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>