force-app/main/default/objects/Course_Activity_Completion__c/fields/Grade_Pct__c.field-meta.xml
<CustomField>
    <fullName>Grade_Pct__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Formula: Points_Earned__c / Activity__r.Points_Possible__c * 100. Returns null if Points_Possible__c = 0.</description>
    <formula>(Points_Earned__c /  Activity__r.Points_Possible__c )* 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Points_Earned__c / Activity__r.Points_Possible__c * 100. Returns null if Points_Possible__c = 0.</inlineHelpText>
    <label>Grade Pct</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>