force-app/main/default/objects/Course_Activity_Completion__c/fields/Graded_At__c.field-meta.xml
<CustomField>
    <fullName>Graded_At__c</fullName>
    <description>GC updateTime when state = RETURNED</description>
    <inlineHelpText>GC updateTime when state = RETURNED</inlineHelpText>
    <label>Graded At</label>
    <type>DateTime</type>
</CustomField>