force-app/main/default/objects/Course_Activity_Completion__c/fields/Penny_Flag__c.field-meta.xml
<CustomField>
    <fullName>Penny_Flag__c</fullName>
    <description>Set by adapter logic post-sync.</description>
    <inlineHelpText>Set by adapter logic post-sync.</inlineHelpText>
    <label>Penny Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Low Confidence</fullName>
            </value>
            <value>
                <fullName>Needs Coaching</fullName>
            </value>
            <value>
                <fullName>Celebrate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>