force-app/main/default/objects/Course_Activity_Completion__c/fields/Penny_Flag_Reason__c.field-meta.xml
<CustomField>
    <fullName>Penny_Flag_Reason__c</fullName>
    <description>why the flag was set, visible to coach and Penny</description>
    <inlineHelpText>why the flag was set, visible to coach and Penny</inlineHelpText>
    <label>Penny Flag Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>