force-app/main/default/objects/Course_Activity_Completion__c/fields/Points_Earned__c.field-meta.xml
<CustomField>
    <fullName>Points_Earned__c</fullName>
    <description>out of Activity__r.Points_Possible__c</description>
    <inlineHelpText>out of Activity__r.Points_Possible__c</inlineHelpText>
    <label>Points Earned</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>