force-app/main/default/objects/Course_Activity_Completion__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Raw score from LMS</description>
    <inlineHelpText>Raw score from LMS</inlineHelpText>
    <label>Score</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>