force-app/main/default/objects/Course_Activity_Completion__c/fields/Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>Submitted_At__c</fullName>
    <description>GC updateTime when state = TURNED_IN</description>
    <inlineHelpText>GC updateTime when state = TURNED_IN</inlineHelpText>
    <label>Submitted At</label>
    <type>DateTime</type>
</CustomField>